Use Current Class ClassLoader with ServiceLoader.load()